--- a/index.css
+++ b/index.css
@@ -4,3 +4,12 @@
    
     
 }
+
+#photo-radii{
+    display: block;
+    border-radius: 50%;
+    margin-right: auto;
+    margin-left: auto;
+   
+
+}
