--- a/index.css
+++ b/index.css
@@ -13,3 +13,16 @@
    
 
 }
+
+h1{
+    text-align: center;
+    margin-top: 10px;   
+}
+
+p{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 400;
+    font-size: larger;
+    text-align: center;
+    margin: 10px 60px 30px 60px;
+}
