--- a/index.css
+++ b/index.css
@@ -43,6 +43,11 @@ p{
     font-style: italic;
 }
 
+hr{
+    width: 30%;
+    margin: auto;
+}
+
 ul{
     list-style-type: none;
     /* overflow: auto; */
