--- a/index.css
+++ b/index.css
@@ -52,10 +52,12 @@ p{
     font-size: larger;
   
 }
-/* 
-.favorite h1{
+
+.favorite h2{
     color: honeydew;
-} */
+    margin-top: 40px;
+    margin-bottom: 10px;
+}
 
 .favorite p{
     font-size: medium;
