--- a/index.css
+++ b/index.css
@@ -110,6 +110,14 @@ a:hover{
     color: purple;
 }
 
+
 a:visited{
     color: green;
+}
+
+.foot{
+    background-color: black;
+    color: honeydew;
+    margin: 10px 350px 10px 350px;
+    border-radius: 5px;
 }
