--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ p{
 .favorite h2{
     color: honeydew;
     margin-top: 40px;
-    margin-bottom: 10pxg;
+    margin-bottom: 10px;
 }
 
 .favorite p{
